--- a/style.css
+++ b/style.css
@@ -72,20 +72,62 @@ img {
   clear: both;
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;1,400&display=swap");
+@media screen and (min-width: 769px) {
 
+   .row {
+      width: 100%;
+   }
+}
+
+@media screen and (min-width:421px) and (max-width:768px) {
+
+   .row {
+      width: 100%;
+      margin-top: 0px;
+   }
+
+   #lezioni .row>.left,
+   #lezioni .row>.right {
+      width: 100%;
+      text-align: justify;
+      margin-bottom: 10px;
+   }
+   #lezioni h3 {
+      margin: 0 0 10px 0;
+   }
+   #lezioni .row>.left img,
+   #lezioni .row>.right img {
+      float: right;
+      margin: 20px 0 20px 20px;
+      height: 10vw;
+   }
+
+   #why .row>.first,
+   #why .row>.second,
+   #why .row>.third {
+      width: calc(100% / 3 - 20px);
+      float: left;
+      margin-top: 0;
+      padding: 0 10px;
+   }
+   #why .row img {
+      padding: 10px;
+      height: 15vw;
+   }
+
+   img {
+      height: 20vw;
+   }
+
+}
 
 @media screen and (max-width: 420px) {
-
-   body {
-      padding: 0;
-      font-family: 'Montserrat', sans-serif;
-   }
 
    .row {
       width: 100%;
       margin: 0px;
    }
+
 
    #lezioni .row>.left,
    #lezioni .row>.right,
